# amplifier-context-intelligence

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.frontend  Dockerfile.intelligence  README.md  amplifier-online.yaml  deploy.sh  docker-compose.airgap.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint-intelligence.sh  neo4j.Dockerfile  pyproject.toml  server-config.example.yaml  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  context-intelligence-api-build-deploy.yaml  m2-auth-acceptance.yml
config/: example-secrets.env  secrets.env
context_intelligence_server/: __init__.py  auth.py  authz.py  blob_processor.py  blob_store.py  config.py  credentials.py  dashboard.py  doctor.py  graph_store.py  idempotency.py  identity_store.py  init_command.py  logging_config.py  main.py  models.py  neo4j_store.py  ownership.py  pipeline.py  protocol.py  queue_manager.py  registry.py  services.py  status.py  utils.py
context_intelligence_server/handlers/: __init__.py  default.py  event.py  orchestrator_run.py  recipe.py  session.py  step.py  tool_call.py  tool_execution.py  version.py
context_intelligence_server/routers/: __init__.py  admin.py  queues.py  skills.py  version.py
context_intelligence_server/skills/: context-intelligence-graph-query.md
context_intelligence_server/web/: admin.html  dashboard.html  explorer.html  index.html  neo4j.html  queues.html
docs/: auth-flows.md  auth-troubleshooting-and-upgrades.md  azure-deployment.md  entra-auth-setup.md  identity-management.md  local-development.md  m2-auth-acceptance.md  managing-api-keys.md  node-identity-migration.md  peer-onboarding.md  remote-access-sharing.md  service-setup.md
docs/architecture/: 01-pipeline-flow.dot  02-handler-architecture  02-handler-architecture.dot  03-graph-model.dot  04-default-handler-flow.dot  05-durable-ingest-queue.dot  06-auth-flow.dot  07-auth-startup.dot  08-identity-map-management.dot  README.md
docs/audits/: 2026-06-18-dangling-node-reader-audit.md
docs/designs/: per-user-api-keys.md
docs/dot/: container-initialization.dot  data-access.dot  event-pipeline.dot  event-replay.dot  graph-schema.dot  system-architecture.dot
docs/plans/: 2026-03-13-context-intelligence-server-design.md  2026-03-13-phase-1-foundation-plan.md  2026-03-13-phase-2-handler-migration-plan.md  2026-03-13-phase-3-blob-cypher-plan.md  2026-03-13-phase-4-dashboard-bundle-plan.md  2026-03-14-cleanup-dashboard-logging-design.md  2026-03-14-cleanup-dashboard-logging-plan.md  2026-03-14-context-intelligence-exploration-system-design.md  2026-03-14-exploration-system-phase1-infrastructure.md  2026-03-14-exploration-system-phase2-frontend.md  2026-03-14-exploration-system-phase3-bundle-dotfiles.md  2026-03-14-phase-3-completion-summary.md  2026-03-14-task-8-completion-summary.md  2026-03-15-context-intelligence-service-application-layer-design.md  2026-03-15-phase3-task1-bundle-skeleton-summary.md  2026-03-15-phase4-server-bundle-completion-summary.md  2026-03-15-service-application-layer-bugfixes.md  2026-03-15-service-application-layer-implementation.md  2026-04-06-session-last-updated-implementation.md
frontend/: catalog.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: a2ui-client.ts  a2ui-renderer.ts  app-shell.ts  main.ts  session-controls.ts
frontend/test/: a2ui-client.test.ts  a2ui-renderer.test.ts  setup.ts
intelligence_service/: __init__.py  __main__.py  _async_utils.py  a2ui_bridge.py  amplifier_app.py  amplifier_intelligence_runtime.py  amplifier_session_manager.py  app.py  config.py  drain.py  pyproject.toml  session_manager.py
scripts/: backfill_self_delegation.py  entra-identities.example.json  migrate-dates.py  prime-local-config.py  repair_dual_labels.py  seed-entra-identities.sh
service/macos/: com.context-intelligence.server.plist.template
test/airgap/: README.md  dtu-profile.yaml  verify-airgap-apoc.sh
tests/: conftest.py  test_admin_api_key_digest.py  test_admin_key_route_scope.py  test_admin_ui_route.py  test_architecture_readme.py  test_auth.py  test_authz_empty_state.py  test_blob_processor.py  test_blob_store.py  test_bootstrap_empty_map.py  test_config.py  test_credentials.py  test_dashboard.py  test_dashboard_html.py  test_dead_letter_requires_admin.py  test_docker_compose_intelligence.py  test_docker_compose_simplified.py  test_docker_entrypoint.py  test_docker_infrastructure.py  test_dockerfile_intelligence.py  test_doctor.py  test_dot_files.py  test_easyauth_browser_identity.py  test_entra_integration.py  test_entra_resolver.py  test_flush_global_lock_order.py  test_graph_store.py  test_identity_map_e2e.py  test_identity_map_wire.py  test_identity_store.py  test_init_command.py  test_jwks_hardening.py  test_logging_config.py  test_m2_service_auth.py  test_macos_plist_template.py  test_main.py  test_models.py  test_neo4j_browser_url_hidden.py  test_neo4j_client_split.py  test_neo4j_store.py  (+28 more)
tests/handlers/: test_default.py  test_event.py  test_field_lifters.py  test_field_lifters_pkg.py  test_init.py  test_orchestrator_run.py  test_recipe.py  test_session.py  test_skills.py  test_step.py  test_tool_call.py  test_tool_execution.py  test_version.py
tests/integration/: conftest.py  test_blob_pipeline.py  test_crash_recovery.py  test_data_layer_3_delegation_skill.py  test_data_layer_3_recipe_pipeline.py  test_docker_image.py  test_durable_ingest.py  test_event_pipeline.py  test_turn_chain.py
tests/intelligence_service/: conftest.py  test_a2ui_bridge.py  test_amplifier_app.py  test_amplifier_intelligence_runtime.py  test_amplifier_session_manager.py  test_app.py  test_app_amplifier_lifespan.py  test_config.py  test_drain.py  test_pyproject_config.py  test_routing_setup.py  test_session_manager.py
tests/neo4j/: __init__.py  conftest.py  test_chunked_flush.py  test_concurrent_delegate_dual_label.py  test_concurrent_flush.py  test_conftest_fixtures.py  test_end_handler_buffer_shadow.py  test_find_delegation_by_sub_session.py  test_flush_lock_ordering.py  test_get_node_labels.py  (+12 more)
(+108 files in other folders)
