[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-intelligence-server"
version = "0.1.0"
description = "Context Intelligence Server for Amplifier"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.0.0",
    "neo4j>=5.0",
    "aiofiles>=24.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
context-intelligence-server = "context_intelligence_server.main:run"
context-intelligence-server-init = "context_intelligence_server.init_command:main"

[tool.hatch.build.targets.wheel]
include = ["context_intelligence_server/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
