[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-intelligence-server"
version = "6.6.6"
description = "Context Intelligence Server for Amplifier"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.14.2",
    "neo4j>=5.0",
    "aiofiles>=24.0.0",
    "pyyaml>=6.0",
    "pyjwt[crypto]>=2.8.0",
]

[project.scripts]
context-intelligence-server = "context_intelligence_server.main:main"

[tool.amplifier]
kind = "service"  # Not an Amplifier bundle — this is the CI server backend (FastAPI + Neo4j)

[tool.hatch.build.targets.wheel]
include = ["context_intelligence_server/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "neo4j: marks tests as requiring a live Neo4j container (deselect with -m 'not neo4j')",
    "integration: marks tests that exercise live async drain-workers or the full HTTP pipeline (deselect with -m 'not integration')",
]
timeout = 30

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "pygments>=2.20.0", # security: ReDoS in AdlLexer (CVE, affects <2.20.0)
    "docker>=7.1.0",
    "pytest-timeout>=2.4.0",
]
