[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intelligence-service"
version = "0.1.0"
description = "Intelligence Service for Amplifier"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
include = ["intelligence_service/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
